...
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_sort_by_alpha_24"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEntries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
...
